--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">GoToSalons</string>
+    <string name="app_name">GoToSalons for Business</string>
     <string name="terms">By clicking \'CONTINUE\', you are accepting to our <font color='#FF8C00'>Terms</font> and <font color="#FF8C00">Privacy Policy</font></string>
     <string name="resend_code">Can\'t receive SMS? <font color='#FF8C00'>Resend Code</font></string>
     <string name="privacy"><h1>Privacy Policy for GoToSalons</h1>
